<!--
  ~ Created by Igor Stevanovic on 11/17/20 12:17 AM
  ~ Copyright (c) 2020 MrCooker. All rights reserved.
  ~ Last modified 11/17/20 12:15 AM
  ~ Licensed under the GPL-3.0 License;
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ https://www.gnu.org/licenses/gpl-3.0.en.html
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MrCooker</string>
    <string name="exit_dialog_message">Are you sure want to exit?</string>
    <string name="exit_dialog_title">Exit?</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="status_online">Back Online</string>
    <string name="status_offline">No Connection</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="name">Name</string>
    <string name="time_to_cook_in_minutes">Time to cook in minutes</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="register">Register</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="all_recipes">All Recipes</string>
    <string name="conversations">Conversations</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="night_mode">Night Mode</string>
    <string name="reset_password">Reset Password</string>
    <string name="click_on_the_button_to_reset_your_password_email_link_will_be_sent">Enter an email to reset your password. Check the link in the email.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="delete_account">Delete account</string>
    <string name="your_profile">Your Profile</string>
    <string name="search">Search...</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile_info">Edit Profile Info</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="show_to_everyone">Show to everyone:</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="what_should_we_improve">What should we improve?</string>
    <string name="we_care_about_your_opinion">We care about your opinion!</string>
    <string name="would_you_like_to_rate_our_app">Would you like to rate our app?</string>
    <string name="update">Update</string>
    <string name="new_update_available">New update available!</string>
    <string name="would_you_like_to_go_to_the_playstore_and_update_an_app">Would you like to go to the PlayStore and update an app?</string>
    <string name="delete_image_dialog">Deleting image?</string>
    <string name="delete_image_dialog_message">Are you sure you want to delete this image?</string>

    <!-- App Updater dialog strings-->
    <string name="android_app_upd_updater_info_install">The application has moved to a new address. Please install a newer version.</string>
    <string name="android_app_upd_updater_info_update">A new version is available. Please update the application.</string>
    <string name="android_app_upd_restricter_info_install">This is an old version and does not operate. An application has moved to a new address. \nPlease install a newer version.</string>
    <string name="android_app_upd_restricter_info_update">This is an old version and does not operate. Please update the application.</string>
    <string name="android_app_upd_restricter_info_open_new_version">This is an old version and does not operate. Please open the new version.</string>
    <string name="add_maximum_5_images">Add maximum 5 images:</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="edit">EDIT</string>
    <string name="messages">Messages</string>
    <string name="user_profile">User Profile</string>
    <string name="show_my_recipes">Show My Recipes</string>
    <string name="show_user_recipes">Show User Recipes</string>

</resources>