<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Igor Stevanovic on 11/17/20 12:17 AM
  ~ Copyright (c) 2020 MrCooker. All rights reserved.
  ~ Last modified 11/17/20 12:15 AM
  ~ Licensed under the GPL-3.0 License;
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ https://www.gnu.org/licenses/gpl-3.0.en.html
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/allRecipesFragment"
        android:title="@string/all_recipes"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/conversationsFragment"
        android:title="@string/messages"
        android:icon="@drawable/ic_conversations"/>

    <item android:id="@+id/placeholder"
        android:title=""/>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>

    <item android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>

</menu>